--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ckeditor4": "^4.22.0",
     "connect-livereload": "^0.6.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-requests-logger": "^4.0.0",
